Fixed MakeFile and Added all the Sprites

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CXXFLAGS = -std=c++11
 
 compile:
-	g++ -o game ${CXXFLAGS} main.cpp lib/Game.cpp -I/usr/local/include -L/usr/local/lib -lGL -lglut
+	g++ -o game ${CXXFLAGS} main.cpp lib/Game.cpp -I/opt/homebrew/include -L/opt/homebrew/lib -lGL -lglut
 
 run_game:
 	DISPLAY=:0 ./game
