Updated Makefile for CSIL Computer

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS = -std=c++11
+CXXFLAGS = -std=c++11 -DGL_GLEXT_PROTOTYPES
 
 compile:
 	g++ -o game ${CXXFLAGS} main.cpp lib/Game.cpp -I/opt/homebrew/include -L/opt/homebrew/lib -lGL -lglut
